--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - web
   api:
-    image: api:1.0.0
+    image: api
     build: backend
     command: sh -c "python manage.py migrate &&
       python manage.py collectstatic --noinput &&
