fix folder path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       python manage.py collectstatic --noinput &&
       gunicorn --workers=5 reddit_clone.wsgi:application --bind 0.0.0.0:8000"
     volumes:
-      - backend:/api:rw # map data and files from parent directory in host to microservice directory in docker container
+      - ./backend:/api:rw # map data and files from parent directory in host to microservice directory in docker container
       - static_volume:/api/static
     expose:
       - 8000
